[package]
name = "leogate"
version = "0.1.0"
authors = ["reza-ebrahimi <reza.ebrahimi.dev@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1.1.0", features = ["full"] }
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
actix-cors = "0.4.0"
actix-rt = "1.1.0"
async-graphql = "2.5.0"
async-graphql-actix-web = "2.5.0"
serde = "1.0.122"
serde_json = { version = "1.0.61", features = ["raw_value"] }
ros-sys = { path = "../ros-sys" }
ros_manager = { path = "src/ros_manager" }
ros_schema = { path = "src/ros_schema"}