[package]
name = "leogate"
version = "0.1.0"
authors = ["reza-ebrahimi <reza.ebrahimi.dev@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
ros-sys = { path = "../ros-sys" }
futures = "0.3"
tokio = { version = "1.4.0", features = ["full"] }
chrono = "0.4.19"

actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
async-graphql = "2.5.0"
async-graphql-actix-web = "2.5.0"

# actix = "0.11.1"
# actix-web = "4.0.0-beta.5"
# actix-web-actors = "4.0.0-beta.4"
# async-graphql = { git = "https://github.com/reza-ebrahimi/async-graphql", branch = "actix-web-v4-beta" }
# async-graphql-actix-web = { git = "https://github.com/reza-ebrahimi/async-graphql", branch = "actix-web-v4-beta" }

serde = "1.0.122"
serde_json = { version = "1.0.61", features = ["raw_value"] }

# subscriptions
async-std = { version = "1.9.0", features = ["unstable"] }
os_info = "3.0.2"
systemstat = "0.1.7"
sysinfo = "0.17.0"