[package]
name = "ros-sys"
version = "0.1.0"
authors = ["reza-ebrahimi <reza.ebrahimi.dev@gmail.com>"]
edition = "2018"
links = "ros-native"
build = "build.rs"

[lib]
name = "ros_sys"
path = "src/lib.rs"
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.56.0"

[dependencies]
futures = "0.3"
actix = "0.10.0"
lazy_static = "1.4.0"
async-graphql = "2.5.0"
serde = "1.0.122"
serde_json = { version = "1.0.61", features = ["raw_value"] }
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }