[package]
name = "ros_manager"
version = "0.1.0"
authors = ["reza-ebrahimi <reza.ebrahimi.dev@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
async-graphql = "2.5.0"
tokio = { version = "1.1.0", features = ["full"] }
ros-sys = { path = "../../../ros-sys" }