[package]
name = "ros_schema"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
ros_msgs = { path = "../ros_msgs"}
ros-sys = { path = "../../../ros-sys" }
futures = "0.3"
async-graphql = "2.5.0"
async-std = { version = "1.9.0", features = ["unstable"] }
serde = "1.0.122"
serde_json = { version = "1.0.61", features = ["raw_value"] }